css/BlackLune.css
/*v1.0.2 21/10/11*/
/*v1.0.2 Fixed some broken ui*/

/* v1.0.1 21/09/22 */
/*v1.0.1 : Menu Timer added*/



/*Font*/
@font-face {
    src        : url(https://fonts.gstatic.com/s/notosansmono/v11/BngrUXNETWXI6LwhGYvaxZikqZqK6fBq6kPvUce2oAZcdthSBUsYck4-_GFJ093dVQ.woff2) format('woff2');
    font-family: gamefont;
}

@font-face {
    font-family: 'JP';
    src        : url(https://fonts.gstatic.com/s/pressstart2p/v9/e3t4euO8T-267oIAQAu6jDQyK3nbivN04w.woff2) format('woff2');
}

/*Disable AD*/
.endAHolder,
div#aHider,
#endAMerger {
    display: none !important;
}

/*Friend,stream*/
#tlInfHold {
    display: none !important;
}

/*Menu Container*/
#menuItemContainer {
    background   : black;
    border       : solid 20px #ffffff;
    display      : block;
    left         : 0;
    position     : fixed;
    top          : unset;
    bottom       : 0px;
    width        : 600px;
    height       : 600px;
    transform    : translateY(30%)translateX(-30%)rotateZ(-35deg);
    border-radius: 100%;

}

.menuItem span {
    font-size: 60px !important;
}


.menuItem:hover {
    filter: drop-shadow(0 0 5px white);
}

.menuItem {
    border         : black 10px solid;
    height         : 80px;
    background     : white;
    border-radius  : 50%;
    display        : flex;
    width          : 80px;
    justify-content: center;
    align-content  : center;
    align-items    : center;
    flex-wrap      : nowrap;
    flex-direction : column;
}

.menuItem:hover .menBtnIcn {
    color    : black !important;
    transform: scale(1.1);
}

.menuItem .menuItemTitle {
    display: none;
}

.menuItem[onclick="SOUND.play(`select_0`,0.15);showWindow(5)"] {
    left    : 360px;
    position: absolute;
    bottom  : 550px;
}

.menuItem[onclick="SOUND.play(`select_0`,0.15);showWindow(14)"] {
    left    : 450px;
    position: absolute;
    bottom  : 490px;
}

.menuItem[onclick="SOUND.play(`select_0`,0.15);windows[32].openHome()"] {
    left    : 520px;
    position: absolute;
    bottom  : 410px;
}

.menuItem[onclick="SOUND.play(`select_0`,0.15);window.open('/social.html', '_blank')"] {
    position: absolute;
    left    : 560px;
    bottom  : 310px;
}

.menuItem[onclick="SOUND.play(`select_0`,0.15);window.open('/social.html', '_blank')"] span {
    color: #0e7811 !important;
}

.menuItem[onclick="SOUND.play(`select_0`,0.15);showGames()"] {
    position: absolute;
    left    : 560px;
    bottom  : 200px;
}

.menuItem[onclick="SOUND.play(`select_0`,0.15);showWindow(4)"] {
    position: absolute;
    left    : 520px;
    bottom  : 100px;
}

.menuItem[onclick="showWindow(1);SOUND.play(`select_0`,0.15);"] {
    position: absolute;
    left    : 450px;
    bottom  : 10px;
}

#clientExit {
    display: none !important;
}

/*Profile top left*/
#signedInHeaderBar {
    background: black;
}

/*Menu timer*/
#uiBase.onMenu #spectateUI {
    display  : block !important;
    position : fixed;
    bottom   : 48.5%;
    top      : unset;
    left     : 50%;
    right    : unset;
    transform: translate(-50%, 50%);
    z-index  : 1;
    width    : 10px;
    height   : 10px;
}

#uiBase.onMenu #spectateHUD {
    display        : flex;
    justify-content: center;
    transform      : unset;
    left           : unset;
}

#uiBase.onMenu #specTeam0,
#uiBase.onMenu #spec0,
#uiBase.onMenu #spec1,
#uiBase.onMenu #specNames,
#uiBase.onMenu #specStats,
#uiBase.onMenu #specContr,
#uiBase.onMenu #specKPDContr,
#uiBase.onMenu #specSus,
#uiBase.onMenu #specTeam1,
#uiBase.onMenu #specGMessage,
#uiBase.onMenu #specGameInfo {
    display: none !important
}

#uiBase.onMenu #specTimer:before {
    content: "Timer: ";
}

#uiBase.onMenu #specTimer {
    width           : 300px;
    display         : block !important;
    font-size       : 35px;
    background-color: transparent;
    color           : rgba(255, 255, 255, .55);
    min-width       : unset;
}

/*Customize Menu*/
#menuClassContainer {
    right    : unset;
    display  : unset !important;
    position : fixed;
    top      : unset;
    bottom   : unset;
    transform: unset;
}

#bubbleContainer {
    display: none !important;
}

div#policeButton img {
    margin-top   : auto !important;
    margin-bottom: auto !important
}

div#policeButton {
    border  : solid 2px white !important;
    display : block !important;
    position: fixed;
    right   : 0 !important;
    top     : 70px;
    right   : unset;
    margin  : unset;
    width   : 50px !important;
    height  : 50px !important;
}

#menuClassNameTag,
#menuClassName,
#menuClassSubtext {
    display: none !important;
}

#menuClassContainer,
#menuClassContainer div,
#menuClassContainer div div {
    display : block;
    position: fixed;
}

#classPreviewCanvas {
    right    : 50%;
    display  : block;
    position : fixed;
    transform: translateX(50%);
    bottom   : 0%;
    margin   : unset;
}

#customizeButton {
    left         : 0;
    transform    : translate(-30%, 30%);
    bottom       : 0%;
    position     : fixed;
    top          : unset;
    height       : 400px;
    width        : 400px;
    border-radius: 50%;
    background   : black;
    border       : 20px solid white !important;
    font-size    : 0 !important;

}

#customizeButton span.material-icons {
    position  : absolute;
    left      : 40%;
    text-align: center;
    bottom    : 40%;
    font-size : 100px !important;
}

#menuHolder:before {
    background: black;
    content   : " ";
    left      : 0;
    top       : 0;
    bottom    : 0;
    width     : 200px;
    clip-path : polygon(0 0, 60% 0, 100% 100%, 0% 100%);
    position  : fixed;
}

/*Spectate button*/
#uiBase.onMenu #spectButton span[style="font-size:15px;color:rgba(255,255,255,0.6)"] {
    display: none;
}

#uiBase.onMenu #spectButton {
    position : fixed;
    bottom   : 40%;
    left     : 50%;
    display  : block;
    right    : unset;
    top      : unset;
    transform: unset;
    z-index  : initial;
}
/* ... */

